--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Benjamin DAVID
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: Helps pull data from praw, the Reddit handler written in Python. 
     Stores data into a PostgreSQL database.
-License: What license is it under?
+License: MIT + file LICENSE
 Depends: 
     glue
 Encoding: UTF-8
